--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "engines":{ "node":"18x},
   "dependencies": {
     "express": "^4.18.3",
     "npm": "^10.5.0"
-  }
+  },
+  "scripts":{"start": "node index.js"}
 }
